--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@
 
 html {
 	font-family: monospace;
+	color: #ffb200;
 }
 
 html, body {
@@ -17,6 +18,19 @@ html, body {
 	height: 100%;
 }
 
+p {
+	font-size: 16px;
+}
+
+button {
+	border: 1px solid #ffb200;
+	background: transparent;
+	color: #ffb200;
+	margin: 0;
+	padding: 5px;
+	vertical-align: middle;
+}
+
 #hud {
 	position: absolute;
 	top: 0;
@@ -26,7 +40,6 @@ html, body {
 	margin: 20px;
 	border: 5px solid #ffb200;
 	text-align: center;
-	color: #ffb200;
 }
 
 #hud::before {
@@ -47,6 +60,13 @@ html, body {
 	left: 10px;
 	font-size: 30px;
 	text-transform: uppercase;
+}
+
+#ask {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	width: 235px;
 }
 
 #magi {
